# vanessa

./: CMakeLists.txt  README.md
FRONTEND/: .gitignore  CMakeLists.txt  FRONTEND.pro  Makefile  Makefile.Debug  Makefile.Release  README.md
FRONTEND/data/: productos.txt
FRONTEND/include/: console.h  mainwindow.h  product.h  store.h  utils.h
FRONTEND/src/: console.cpp  main.cpp  main_console.cpp  mainwindow.cpp  product.cpp  store.cpp  utils.cpp
FRONTEND/ui/: mainwindow.ui
desktop/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/: CMakeLists.txt
src/managers/: manager_base.h  producto_manager.cpp  producto_manager.h
src/modelos/: producto.cpp  producto.h
src/persistencia/: ipersistencia.h  persist_sqlite.cpp  persist_sqlite.h
src/vistas/consola/: main_console.cpp
src/vistas/desktop/: MainWindow.cpp
src/vistas/desktop/desktop/: MainWindow.h
src/vistas/tui/: main_tui.cpp  tui_curses.cpp  tui_curses.h
